# serializer version: 1
# name: TestOrganizationResourceAccessAPI.test_list_organization_resource_access_is_not_nplus1
  '''
  SELECT "clairview_user"."id",
         "clairview_user"."password",
         "clairview_user"."last_login",
         "clairview_user"."first_name",
         "clairview_user"."last_name",
         "clairview_user"."is_staff",
         "clairview_user"."is_active",
         "clairview_user"."date_joined",
         "clairview_user"."uuid",
         "clairview_user"."current_organization_id",
         "clairview_user"."current_team_id",
         "clairview_user"."email",
         "clairview_user"."pending_email",
         "clairview_user"."temporary_token",
         "clairview_user"."distinct_id",
         "clairview_user"."is_email_verified",
         "clairview_user"."has_seen_product_intro_for",
         "clairview_user"."strapi_id",
         "clairview_user"."theme_mode",
         "clairview_user"."partial_notification_settings",
         "clairview_user"."anonymize_data",
         "clairview_user"."toolbar_mode",
         "clairview_user"."hedgehog_config",
         "clairview_user"."events_column_config",
         "clairview_user"."email_opt_in"
  FROM "clairview_user"
  WHERE "clairview_user"."id" = 2
  LIMIT 21
  '''
# ---
# name: TestOrganizationResourceAccessAPI.test_list_organization_resource_access_is_not_nplus1.1
  '''
  SELECT "clairview_organization"."id",
         "clairview_organization"."name",
         "clairview_organization"."slug",
         "clairview_organization"."logo_media_id",
         "clairview_organization"."created_at",
         "clairview_organization"."updated_at",
         "clairview_organization"."plugins_access_level",
         "clairview_organization"."for_internal_metrics",
         "clairview_organization"."is_member_join_email_enabled",
         "clairview_organization"."enforce_2fa",
         "clairview_organization"."is_hipaa",
         "clairview_organization"."customer_id",
         "clairview_organization"."available_product_features",
         "clairview_organization"."usage",
         "clairview_organization"."never_drop_data",
         "clairview_organization"."customer_trust_scores",
         "clairview_organization"."setup_section_2_completed",
         "clairview_organization"."personalization",
         "clairview_organization"."domain_whitelist"
  FROM "clairview_organization"
  WHERE "clairview_organization"."id" = '00000000-0000-0000-0000-000000000000'::uuid
  LIMIT 21
  '''
# ---
# name: TestOrganizationResourceAccessAPI.test_list_organization_resource_access_is_not_nplus1.10
  '''
  SELECT 1 AS "a"
  FROM "clairview_organizationmembership"
  WHERE ("clairview_organizationmembership"."organization_id" = '00000000-0000-0000-0000-000000000000'::uuid
         AND "clairview_organizationmembership"."user_id" = 2)
  LIMIT 1
  '''
# ---
# name: TestOrganizationResourceAccessAPI.test_list_organization_resource_access_is_not_nplus1.11
  '''
  SELECT "clairview_organizationmembership"."id",
         "clairview_organizationmembership"."organization_id",
         "clairview_organizationmembership"."user_id",
         "clairview_organizationmembership"."level",
         "clairview_organizationmembership"."joined_at",
         "clairview_organizationmembership"."updated_at"
  FROM "clairview_organizationmembership"
  WHERE ("clairview_organizationmembership"."organization_id" = '00000000-0000-0000-0000-000000000000'::uuid
         AND "clairview_organizationmembership"."user_id" = 2)
  LIMIT 21
  '''
# ---
# name: TestOrganizationResourceAccessAPI.test_list_organization_resource_access_is_not_nplus1.12
  '''
  SELECT COUNT(*) AS "__count"
  FROM "ee_organizationresourceaccess"
  WHERE "ee_organizationresourceaccess"."organization_id" = '00000000-0000-0000-0000-000000000000'::uuid
  '''
# ---
# name: TestOrganizationResourceAccessAPI.test_list_organization_resource_access_is_not_nplus1.13
  '''
  SELECT "ee_organizationresourceaccess"."id",
         "ee_organizationresourceaccess"."resource",
         "ee_organizationresourceaccess"."access_level",
         "ee_organizationresourceaccess"."organization_id",
         "ee_organizationresourceaccess"."created_by_id",
         "ee_organizationresourceaccess"."created_at",
         "ee_organizationresourceaccess"."updated_at"
  FROM "ee_organizationresourceaccess"
  WHERE "ee_organizationresourceaccess"."organization_id" = '00000000-0000-0000-0000-000000000000'::uuid
  LIMIT 100
  '''
# ---
# name: TestOrganizationResourceAccessAPI.test_list_organization_resource_access_is_not_nplus1.14
  '''
  SELECT "ee_organizationresourceaccess"."id",
         "ee_organizationresourceaccess"."resource",
         "ee_organizationresourceaccess"."access_level",
         "ee_organizationresourceaccess"."organization_id",
         "ee_organizationresourceaccess"."created_by_id",
         "ee_organizationresourceaccess"."created_at",
         "ee_organizationresourceaccess"."updated_at"
  FROM "ee_organizationresourceaccess"
  WHERE "ee_organizationresourceaccess"."organization_id" = '00000000-0000-0000-0000-000000000000'::uuid
  LIMIT 100
  '''
# ---
# name: TestOrganizationResourceAccessAPI.test_list_organization_resource_access_is_not_nplus1.2
  '''
  SELECT "clairview_organization"."id",
         "clairview_organization"."name",
         "clairview_organization"."slug",
         "clairview_organization"."logo_media_id",
         "clairview_organization"."created_at",
         "clairview_organization"."updated_at",
         "clairview_organization"."plugins_access_level",
         "clairview_organization"."for_internal_metrics",
         "clairview_organization"."is_member_join_email_enabled",
         "clairview_organization"."enforce_2fa",
         "clairview_organization"."is_hipaa",
         "clairview_organization"."customer_id",
         "clairview_organization"."available_product_features",
         "clairview_organization"."usage",
         "clairview_organization"."never_drop_data",
         "clairview_organization"."customer_trust_scores",
         "clairview_organization"."setup_section_2_completed",
         "clairview_organization"."personalization",
         "clairview_organization"."domain_whitelist"
  FROM "clairview_organization"
  WHERE "clairview_organization"."id" = '00000000-0000-0000-0000-000000000000'::uuid
  LIMIT 21
  '''
# ---
# name: TestOrganizationResourceAccessAPI.test_list_organization_resource_access_is_not_nplus1.3
  '''
  SELECT 1 AS "a"
  FROM "clairview_organizationmembership"
  WHERE ("clairview_organizationmembership"."organization_id" = '00000000-0000-0000-0000-000000000000'::uuid
         AND "clairview_organizationmembership"."user_id" = 2)
  LIMIT 1
  '''
# ---
# name: TestOrganizationResourceAccessAPI.test_list_organization_resource_access_is_not_nplus1.4
  '''
  SELECT "clairview_organizationmembership"."id",
         "clairview_organizationmembership"."organization_id",
         "clairview_organizationmembership"."user_id",
         "clairview_organizationmembership"."level",
         "clairview_organizationmembership"."joined_at",
         "clairview_organizationmembership"."updated_at"
  FROM "clairview_organizationmembership"
  WHERE ("clairview_organizationmembership"."organization_id" = '00000000-0000-0000-0000-000000000000'::uuid
         AND "clairview_organizationmembership"."user_id" = 2)
  LIMIT 21
  '''
# ---
# name: TestOrganizationResourceAccessAPI.test_list_organization_resource_access_is_not_nplus1.5
  '''
  SELECT COUNT(*) AS "__count"
  FROM "ee_organizationresourceaccess"
  WHERE "ee_organizationresourceaccess"."organization_id" = '00000000-0000-0000-0000-000000000000'::uuid
  '''
# ---
# name: TestOrganizationResourceAccessAPI.test_list_organization_resource_access_is_not_nplus1.6
  '''
  SELECT "ee_organizationresourceaccess"."id",
         "ee_organizationresourceaccess"."resource",
         "ee_organizationresourceaccess"."access_level",
         "ee_organizationresourceaccess"."organization_id",
         "ee_organizationresourceaccess"."created_by_id",
         "ee_organizationresourceaccess"."created_at",
         "ee_organizationresourceaccess"."updated_at"
  FROM "ee_organizationresourceaccess"
  WHERE "ee_organizationresourceaccess"."organization_id" = '00000000-0000-0000-0000-000000000000'::uuid
  LIMIT 100
  '''
# ---
# name: TestOrganizationResourceAccessAPI.test_list_organization_resource_access_is_not_nplus1.7
  '''
  SELECT "clairview_user"."id",
         "clairview_user"."password",
         "clairview_user"."last_login",
         "clairview_user"."first_name",
         "clairview_user"."last_name",
         "clairview_user"."is_staff",
         "clairview_user"."is_active",
         "clairview_user"."date_joined",
         "clairview_user"."uuid",
         "clairview_user"."current_organization_id",
         "clairview_user"."current_team_id",
         "clairview_user"."email",
         "clairview_user"."pending_email",
         "clairview_user"."temporary_token",
         "clairview_user"."distinct_id",
         "clairview_user"."is_email_verified",
         "clairview_user"."has_seen_product_intro_for",
         "clairview_user"."strapi_id",
         "clairview_user"."theme_mode",
         "clairview_user"."partial_notification_settings",
         "clairview_user"."anonymize_data",
         "clairview_user"."toolbar_mode",
         "clairview_user"."hedgehog_config",
         "clairview_user"."events_column_config",
         "clairview_user"."email_opt_in"
  FROM "clairview_user"
  WHERE "clairview_user"."id" = 2
  LIMIT 21
  '''
# ---
# name: TestOrganizationResourceAccessAPI.test_list_organization_resource_access_is_not_nplus1.8
  '''
  SELECT "clairview_organization"."id",
         "clairview_organization"."name",
         "clairview_organization"."slug",
         "clairview_organization"."logo_media_id",
         "clairview_organization"."created_at",
         "clairview_organization"."updated_at",
         "clairview_organization"."plugins_access_level",
         "clairview_organization"."for_internal_metrics",
         "clairview_organization"."is_member_join_email_enabled",
         "clairview_organization"."enforce_2fa",
         "clairview_organization"."is_hipaa",
         "clairview_organization"."customer_id",
         "clairview_organization"."available_product_features",
         "clairview_organization"."usage",
         "clairview_organization"."never_drop_data",
         "clairview_organization"."customer_trust_scores",
         "clairview_organization"."setup_section_2_completed",
         "clairview_organization"."personalization",
         "clairview_organization"."domain_whitelist"
  FROM "clairview_organization"
  WHERE "clairview_organization"."id" = '00000000-0000-0000-0000-000000000000'::uuid
  LIMIT 21
  '''
# ---
# name: TestOrganizationResourceAccessAPI.test_list_organization_resource_access_is_not_nplus1.9
  '''
  SELECT "clairview_organization"."id",
         "clairview_organization"."name",
         "clairview_organization"."slug",
         "clairview_organization"."logo_media_id",
         "clairview_organization"."created_at",
         "clairview_organization"."updated_at",
         "clairview_organization"."plugins_access_level",
         "clairview_organization"."for_internal_metrics",
         "clairview_organization"."is_member_join_email_enabled",
         "clairview_organization"."enforce_2fa",
         "clairview_organization"."is_hipaa",
         "clairview_organization"."customer_id",
         "clairview_organization"."available_product_features",
         "clairview_organization"."usage",
         "clairview_organization"."never_drop_data",
         "clairview_organization"."customer_trust_scores",
         "clairview_organization"."setup_section_2_completed",
         "clairview_organization"."personalization",
         "clairview_organization"."domain_whitelist"
  FROM "clairview_organization"
  WHERE "clairview_organization"."id" = '00000000-0000-0000-0000-000000000000'::uuid
  LIMIT 21
  '''
# ---
